fdo#80014: vcl: fix drawing of linear gradients

There is an off-by-one error in OutputDevice::ImplDrawLinearGradient()
that causes the bottom line to remain black.

(regression from 04d937c1ec36c2d9fa8c90604c81a37d30e97da6)

(cherry picked from commit d51f53fedb8cd68b1b3122c7199c4ea2d3a6980f)

Conflicts:
	vcl/source/outdev/gradient.cxx

Change-Id: I33948ec8065e446a9ec7efeab5e506c93fa2e9e8